--- a/.github/workflows/hacs.yml
+++ b/.github/workflows/hacs.yml
@@ -2,12 +2,8 @@ name: HACS Action
 
 on:
   push:
-  pull_request:
-  schedule:
-    - cron: "0 0 * * *"
-
-env:
-  ACTIONS_STEP_DEBUG: true
+    tags:
+      - "v*"
 
 jobs:
   hacs:
