--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-components",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Lovelace Google Components for Home Assistant",
   "keywords": [
     "home-assistant",
@@ -16,6 +16,7 @@
   "author": "Giovanni Lamarmora",
   "license": "MIT",
   "dependencies": {
+    "@material/material-color-utilities": "^0.3.0",
     "@material/web": "^2.3.0",
     "@nicufarmache/slide-gesture": "^1.2.4",
     "custom-card-helpers": "^1.9.0",
